<resources>
    <string name="app_name">Smart-Recycle</string>
    <string name="todo">TODO</string>
    <string name="blog">BLOG</string>
    <string name="search_for_recycling_companies">SEARCH</string>
    <string name="welcome">Welcome !</string>
    <string name="recycle_it">Recycle it !</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="done">Done</string>
    <string name="sign">Sign up</string>
    <string name="password">Password</string>
    <string name="select_your_role">Select your role</string>
    <string name="register">Register</string>
    <string name="book">Book Your Slot</string>
    <string name="krishna_and_sister_s_co"><![CDATA[Krishna and Sister\'s Co.>>]]></string>
    <string name="vriddhi_and_brother_s_co"><![CDATA[Vriddhi and Brother\'s CO. >>]]></string>
    <string name="sai_vidhya_vihar_co">Sai Vidhya vihar CO.</string>
    <string name="majan_uni_co">Majan Uni Co.</string>
    <string name="vjti_book_store">Vjti Book Store</string>
    <string name="next">Next</string>
    <string name="select_city">Select City</string>
    <string name="time_slot">Time Slot</string>
    <string name="address">Address</string>
    <string name="done1">DONE</string>
    <string name="filter">Filter</string>
    <string name="logout">LOGOUT</string>
    <string name="name">name</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="contact_us">Contact Us</string>
    <string name="book_your_slot">Book Your Slot</string>
    <string name="maharashtra">Maharashtra</string>
    <string name="mumbai">Mumbai</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="create_your_post">Create your post</string>
    <string name="blog_page">Blog Page</string>
    <string name="create_blog">Create Blog</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">CREATE</string>
    <string name="current_blogs">Current Blogs</string>
    <string name="vriddhi">Vriddhi</string>
    <string name="enter_your_post_here">Enter your post here</string>
    <string name="enter_your_n_n_post_here">Enter your\n\n post here</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="menu_refresh">Refresh</string>
    <string name="chatbot">ChatBot</string>

</resources>