<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Company"
    tools:ignore="MissingClass">

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_rect"
        android:orientation="vertical">

        <TextView
            android:id="@+id/company"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/almendra_display"
            android:text="Vriddhi \n &amp; \nBrother's CO."
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/state_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/maharashtra"
            android:textAlignment="center"
            android:textSize="18sp"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:textColor="@color/black"
            android:text="@string/mumbai"
            android:textAlignment="center"
            android:textSize="18sp"
            android:gravity="center_horizontal" />


        <Button
            android:id="@+id/btn_book"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_rect"
            android:text="@string/book_your_slot"
            android:textSize="25sp"
            app:backgroundTint="@color/Redpastel"
            android:layout_marginStart="35dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/phone"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="casual"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textSize="18sp"
            android:gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>