<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_recycle"
    tools:context=".login_activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_recycle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fonte"
                android:gravity="center"
                android:text="@string/recycle_it"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtEmaillogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                app:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                app:drawableTint="@color/white"
                android:hint="@string/email"
                android:textStyle="bold"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_email" />

            <EditText
                android:id="@+id/edtPasslogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                app:drawableTint="@color/white"
                android:hint="Password"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_lock" />

            <TextView
                android:id="@+id/txtForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:gravity="end"
                android:textStyle="bold"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:textSize="20dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:backgroundTint="#FA897B"
                android:padding="15dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:elevation="10dp"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:backgroundTint = "#86E3CE"
                app:elevation="10dp" />


        </LinearLayout>



    </LinearLayout>

</RelativeLayout>