<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    card_view:cardBackgroundColor="@color/Redpastel"
    card_view:cardCornerRadius="40dp"
    android:layout_marginRight="5dp"
    app:ignore="NamespaceTypo"
    android:focusable="true">


    <LinearLayout
        android:id = "@+id/rl2"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Name"
                android:textColor="#000" />

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/state"
                android:textColor="#000" />

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/textViewState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/state"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/city"
                android:textColor="#000" />

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/textViewCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/phone"
                android:textColor="#000" />

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/textViewPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textColor="#000" />


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>