<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_recycle"
    tools:context=".sign_up">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_recycle" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="?actionBarSize"
        android:src="@drawable/quantum_ic_arrow_back_grey600_24"
        app:tint="@color/white"
        android:layout_marginLeft="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign"
                android:textColor="@color/white"
                app:fontFamily="@font/fonte"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                app:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:textStyle="bold"
                app:drawableTint="@color/white"
                android:hint="Username"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_person" />

            <EditText
                android:id="@+id/edtEmailuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                app:drawableTint="@color/white"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_email" />

            <EditText
                android:id="@+id/edtPassworduser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                app:drawableTint="@color/white"
                android:textStyle="bold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_lock" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/sign_up"
                app:backgroundTint = "#86E3CE"
                android:textStyle="bold"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:elevation="10dp" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>